--- a/CommanderCoinFlip/Base.lproj/LaunchScreen.storyboard
+++ b/CommanderCoinFlip/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coin_edge_neon_crop" translatesAutoresizingMaskIntoConstraints="NO" id="iGP-DR-308">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coin_edge_neon_crop" translatesAutoresizingMaskIntoConstraints="NO" id="iGP-DR-308">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
